--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="email">EMAIL</string>
+    <string name="pass">PASSWORD</string>
+    <string name="ent_email">Enter email</string>
+    <string name="ent_pass">Enter password</string>
 </resources>
